Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2403

QCreator does not warn when capabilities are dropped when self signing symbian packages

XMLWordPrintable

    • 96cd834fbb3d14905758c730591e0372599aecfb

      Currently the createpackage.bat script run by qmake does (almost, there is a message in the compile output) silently drop capabilities when they are incompatible with self-signing mode.

      Qt Creator should raise a warning when this happens.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            hunger Tobias Hunger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes