Symbian: Warn when patching sis files

Wharn when qmake patches sis files to make them compatible with
self-signing.

Task-number: QTCREATORBUG-2403
Reviewed-by: Pawel Polanski